[gd_scene load_steps=4 format=3 uid="uid://qov1mrl8ie23"]

[ext_resource type="Script" path="res://PreHistory/Mobs/Crab/CrabDen.gd" id="1_65g38"]
[ext_resource type="Texture2D" uid="uid://c1qyi2rr5rgid" path="res://PreHistory/Mobs/Crab/CrabsDen.png" id="2_k70qp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8svlh"]
radius = 3.16228

[node name="CrabDen" type="Node2D"]
script = ExtResource("1_65g38")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(2, 2)
texture = ExtResource("2_k70qp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_8svlh")

[node name="CheckTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_check_timer_timeout"]
